# pocketcoder

./: .dockerignore  .env.template  .gitignore  .gitmodules  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CODEBASE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  DEVELOPMENT.md  Dockerfile  Dockerfile.bridge  Dockerfile.docs  Dockerfile.gateway  Dockerfile.opencode  Dockerfile.proxy  Dockerfile.relay  Dockerfile.sandbox  Earthfile  IMPLEMENTATION_PLAN.md  LICENSE  MVP_ROADMAP.md  OPEN_SOURCE_MVP_PLAN.md  Poco.md  README.md  SECURITY.md  SOVEREIGN_EVOLUTION.md  demo-reset.sh  deploy.sh  docker-compose.docs.yml  docker-compose.hackathon-demo.yml  docker-compose.n8n.yml  docker-compose.test.yml  docker-compose.yml  elestio.yml  energy-saver.txt  genesis.sh  opencode-agents.txt  (+11 more)
backend/: Dockerfile  backup_db.sh  entrypoint.sh  go.mod  go.sum  main.go  restore_from_backup.sh
bridge/: chat_bridge.mjs  package.json
client/: .gitignore  CLAUDE.md  DATA_ARCHITECTURE_PLAN.md  FLUTTER_BACKEND_INTEGRATION.md  FLUTTER_DEVELOPMENT_ROADMAP.md  FLUTTER_INTEGRATION_GAPS.md  FLUTTER_INTEGRATION_TASKS.md  LICENSE  README.md  README_MONOREPO.md  analysis_options.yaml  l10n.yaml  pubspec.yaml  rename_app.sh
connector/: Cargo.toml  index.ts  package.json  pocketcoder-plugin.ts
connector/src/: main.rs
dashboard/: index.sql
docker/: backend.Dockerfile  mcp-gateway-entrypoint.sh  mcp-gateway.Dockerfile  opencode.Dockerfile  opencode_entrypoint.sh  proxy.Dockerfile  proxy_entrypoint.sh  rust-builder.Dockerfile  sandbox.Dockerfile
docs/: SYSTEM_ARCHITECTURE.md  agent-identity-audit.md  architecture-rules.md  astro.config.mjs  cleanup-backlog.md  current-state.md  deploy-tls-design.md  deploy-todo.md  e2e-checklist.md  flutter-connectivity-audit.md  goals.md  l10n-backlog.md  launch-readiness.md  mcp-dynamic-tools.md  mvp.md  network-security-audit.md  openclaw-comparison.md  package.json  poco-mcp-gateway-investigation.md  rdme.toml  sync.sh  widget-refactoring-backlog.md
memory/: knowledge-memory-design.md
new_tests/: poco_native_attach_phase1_tmux_zone_d.sh  poco_native_attach_phase2_cao_zone_d.sh  poco_native_attach_phase2_poco_window_zone_c.sh  run_all_tests.sh  run_test.sh  zone_a_tests.sh  zone_b_tests.sh  zone_b_tests_sshd.sh  zone_c_tests.sh  zone_d_tests.sh  zone_e_system_tests.sh  zone_f_security_tests.sh  zone_g_advanced_tests.sh
opencode/: package-lock.json
plugins/: chat-plugin.js  chat-plugin.mjs  chat-plugin.ts  pocketcoder-plugin.js  pocketcoder-plugin.mjs  tsconfig.json
proposals/: test-sop.md
proxy/: Cargo.toml  README.md
relay/: chat_relay.mjs  chat_relay.mjs.bak  check_relay_access.mjs  fix_user_roles.mjs  package.json  raw_debug.mjs  start.sh  sync_ssh_keys.mjs
relay-worker/: package.json  wrangler.toml
sandbox/: entrypoint.sh  listener.ts  opencode.json  sync_keys.sh
scripts/: cleanup_and_reseed.sh  debug_conversation.sh  export_schema.sh  generate_audit.sh  get_token.sh  inspect_ledger.sh  inspect_permission.sh  inspect_sandbox_db.sh  install-docker-mcp.sh  legal_seal.sh  network_matrix_test.py  network_matrix_test.sh  pb_auth.sh  setup_backup_volume.sh  (+1 more)
services/poco-agents/: Cargo.toml
services/poco-agents/src/: agent.rs  main.rs  state.rs  tmux.rs  tools.rs
services/poco-memory/: Cargo.toml  Dockerfile
services/poco-memory/src/: db.rs  embed.rs  main.rs  schema.sql  tools.rs
services/proxy/: Cargo.toml
services/proxy/src/: driver.rs  main.rs  shell.rs
tests/: README.md  (+7 more)
(+611 files in other folders)
