[package]
name = "pocketcoder-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
dotenv = "0.15"
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors"] }
futures-util = "0.3"
tokio-stream = "0.1"
parking_lot = "0.12"
