[package]
name = "poco-memory"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
surrealdb = { version = "2", default-features = false, features = ["protocol-ws"] }
fastembed = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmcp = { version = "1", features = ["server", "macros", "transport-streamable-http-server"] }
schemars = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
