[package]
name = "pocketcoder-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
async-trait = "0.1"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
dotenv = "0.15"
axum = { version = "0.7", features = ["macros", "ws"] }
tower-http = { version = "0.5", features = ["cors"] }
futures-util = "0.3"
tokio-stream = "0.1"
parking_lot = "0.12"
sha2 = "0.10"
hex = "0.4"
urlencoding = "2"
ureq = { version = "2", features = ["json"] }
async-stream = "0.3"
clap = { version = "4.0", features = ["derive"] }
tokio-tungstenite = { version = "0.24.0", features = ["rustls-tls-native-roots"] }
futures = "0.3.31"
url = "2.5.8"
tokio-util = { version = "0.7.18", features = ["io", "codec"] }


